[metadata]
name = xrSolver
version = 0.0.2
author = Xrloong Wang
author_email = xrloong@gmail.com
description = 約束滿足問題及求解器的包裝（A Wrapper for Constraint Satisfication Problem and its solver）
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xrloong/xrSolver
project_urls =
    Bug Tracker = https://github.com/xrloong/xrSolver/issues
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    sympy

[options.packages.find]
where = src

