[metadata]
name = xrSolver-dreal
version = 0.0.1
author = Xrloong Wang
author_email = xrloong@gmail.com
description = xrSolver 的求解器播件，使用 dReal（xrSolver's extension by using dReal）
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/xrloong/xrSolver
project_urls =
    Bug Tracker = https://github.com/xrloong/xrSolver/issues
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires = dreal

[options.packages.find]
where = src

